--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@ flask
 requests
 ollama
 smolagents
-smolagents[gradio]
 litellm
-PyPDF2
 google.generativeai
 scikit-learn
 numpy
+smolagents
+pandas
+langchain
+langchain-community
+sentence-transformers
+datasets
+python-dotenv
+rank_bm25
